2012-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data) src/datafile.c (df_readascii) src/gp_types.h:
	Handle NaN pixels in image plots read in from non-matrix data.
	Handle NaN pixels in pm3d surfaces created by singularities in 
	harmonic mean.
	
	* src/pm3d.c (geomean4 harmean4 pm3d_plot): Revise geomean4():
	All corners positive => return positive geometric mean.
	All corners negative => return negative geometric mean.
	Otherwise return zero (previously the function returned something
	peculiar if 1 or 3 corners were negative).

2012-10-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Implement space-raises-console
	for console mode gnuplot.

	* src/win/wtext.h (getchar): Make sure that getchar is defined.

	* src/term.c (test_term): Add newpath/closepath calls were applicable.

	* src/win/wpause.c: Include command.h for pause_for_mouse. (PauseBox): 
	Do not force pause-messagebox to stay on top. (WndPauseProc): "Cancel"
	button can be activated by escape key. Code cleanup.

	* term/win.trm (WIN_filled_polygon): Filled polygon are always closed.
	Ignore the last corner if it's the same as the first one.

	* src/plot.c (gnu_main) src/win/winmain.c (main): The Windows version
	used to handle the persist command line option in winmain.c. Moving
	it to plot.c ensures that the same options are supported on all
	platforms. See Bug #3538762

	* src/win/wcommon.h src/win/wtext.c (TextShow) src/win/winmain.h
	src/win/winmain.c (WinWindowOpened, WinPersistTextClose)
	src/win/wgraph.c (WndGraphProc) src/wxterminal/wx_term.h
	src/wxterminal/wxt_gui.h src/wxterminal/wxt_gui.cpp (~wxtFrame, 
	wxtFrame::onClose, wxt_window_opened, wxt_atexit) src/plot.c (main)
	Revise handling of persist mode on Windows: Exit wgnuplot only after the
	last plot window (wxt or win) has been closed. The text window is only
	shown if "-" is given on the command line. No zombie wgnuplot process